--- a/OFDM/Course Report/00main.tex
+++ b/OFDM/Course Report/00main.tex
@@ -60,7 +60,7 @@
 \section{Advantages and Disadvantages}
 \input{02sec2.tex}
 
-\section{Pilot Symbols for Channel Estimation}
+\section{Pilot Symbols Aided Synchronization and Channel Estimation}
 \input{03sec3.tex}
 
 \section{Numerical Results}
