--- a/OFDM/Course Report/03sec3.tex
+++ b/OFDM/Course Report/03sec3.tex
@@ -1,2 +1,10 @@
-In the above content, the channel transfer function is an important component to help the OFDM system reach the optimal performance. The channel transfer function is obtained by channel estimation. A common approach is using the pilot symbols. In this section, we will discuss such a technique.
+In the above content, the mathematical properties of OFDM is elegant but the real life application could be complex. For example, how to align the received signal with the transmitted signal? How to detect the number of multipath in the channel? How to detect the frequency offset and align subcarriers? The above questions are referring synchronization and channel estimation. In this section, we will discuss the related techniques.
 
+\subsection{Synchronization}
+In designing the optimal receiver, a matched filter containing possible transmitted waveforms is used to classify the received signal. However, the OFDM baseband signal $x(t)$ is a superposition of multiple subcarriers' data symbols by the Inverse Fourier transform. And the matched filter is actually applied on the Fourier transform of the received signal $\mtx{Y}$. To guarantee the optimal performance, the receiver should be able to align the FFT operator with the observed sample stream. This process is called time synchronization.
+
+The time synchronization of the OFDM system can be achieved by a correlation-based approach. Due to the usage of cyclic prefix, signal contains a part of repeated pattern of itself. The receiver can calculate the sliding autocorrelation of the observed symbol stream using a lag commensurate with the length of the cyclic prefix. The magnitude of the result will reach a peak (close to 1) at the instant the corresponds to the end of the cyclic prefix, which is also the start of the desired signal. Of course, any methods have their limitations. The correlation based synchronization does not There are other methods to achieve time synchronization, such as the MLE/MAP/MMSE, \etc in corporate with the cyclic prefix.
+
+The Time Synchronization is easy to the OFDM system, but the Frequency Synchronization is more challenging. Not only the frequency offset should be estimated, but also the subcarrier spacing should be aligned. To get a better result, the knowledge of the channel is preferred. This process is channel estimation and it can be done at the receiver with the help of pilot symbols.
+
+\subsection{Pilot Symbols}
