--- a/OFDM/Course Report/02sec2.tex
+++ b/OFDM/Course Report/02sec2.tex
@@ -122,7 +122,7 @@ And leads to the following result of the demodulated OFDM symbol
 \end{equation}
 The~\cref{eq:demod} states that the orthogonality of the subcarriers is preserved in the demodulated OFDM symbols.
 
-\subsection{Equalization and Frequency-Selective Fading}
+\subsection{Equalization, Multipath Propagation and Frequency-Selective Fading}
 The~\cref{eq:demod} reveals a simple equalization scheme for the OFDM system. The equalization can be done by multiplying the demodulated OFDM symbols by the inverse of the channel transfer function.
 \begin{equation}
     \mtx{X} = \Lambda^{-1}\mtx{Y}.
@@ -148,10 +148,29 @@ When $L>0$, \aka multipath propagation, the channel transfer function becomes
 \end{equation}
 If $\abs{f\tau_{l_i}-f\tau_{l_j}}=\frac{4k-1}{2}$ for some integer $k$, then $\sgn(e^{j2\pi f\tau_{l_i}})=-\sgn(e^{j2\pi f\tau_{l_j}})$ and cause offsets in the channel transfer function. Frankly, the wideband signals suffer more from the frequency selective fading than narrowband signals because the wideband signals will have more frequency offsets across the bandwidth, while the narrowband signals can be considered flat because the bandwidth may locate in between the frequency offsets (\aka coherent bandwidth). The OFDM system is wideband but it is robust to frequency-selective fading because the subcarriers are spaced at $\triangle f=\frac{1}{T}$ Hz. This spacing is usually much smaller than the coherence bandwidth of the channel. Therefore, the channel can be considered flat over each subcarrier. This allows the OFDM system to use a simple equalizer (\ie zero-forcing) to combat the frequency-selective fading.
 
-\subsection{Peak to Average Power Ratio and Doppler Shift}
+\subsection{Peak to Average Power Ratio, Doppler Shift and Intercarrier Interference (ICI)}
 We have explored many advantages of the OFDM system above and need to cover its weakness. Historically, the computation overhead of Discrete Fourier Transform (DFT) could be one but has been perfectly solved by Fast Fourier Transform (FFT). The high Peak to Average Power Ratio (PAPR) and sensitivity to Doppler Shift are two remaining issues.
 
-The high PAPR is a common issue in the OFDM system. The OFDM system employs a large number of subcarriers in each OFDM symbol duration and has independent information symbols on each subcarrier. The independence means that the phases and amplitudes of the subcarriers can align at certain time instances, resulting high peak power. The high peak power requires the power amplifier to have a large dynamic range, which is expensive and inefficient. The high PAPR also causes the signal to be distorted by the power amplifier, which degrades the system performance.
+The high PAPR is a common issue in the OFDM system. The OFDM system employs a large number of subcarriers in each OFDM symbol duration and has independent information symbols on each subcarrier. The independence means that the phases and amplitudes of the subcarriers can align at certain time instances, resulting high peak power. The high peak power requires the power amplifier to have a large dynamic range, which is expensive and inefficient. The high PAPR also causes the signal to be distorted by the power amplifier, which degrades the system performance. The quantitative analysis of PAPR issue is shown below. The PAPR is defined as
+\begin{equation}
+    \text{PAPR} = \frac{\max\abs{x_n}^2}{\E{\abs{x_n}^2}}, \quad n=0,1,\ldots,N-1.
+\end{equation}
+Since the subcarriers are orthogonal (independent), the central limit theorem can be applied on~\cref{eq:IFFT} and $x_n$ can be approximated as complex Gaussian random variables with zero mean and variance $\sigma^2$ when $N$ is sufficiently large (which is preferred in practice). Then the max PAPR can be approximated as
+\begin{align}
+    \max\abs{x_n}^2
+    &= \sum_{i=0}^{N-1} \sigma^2 = N\sigma^2 \\
+    \E{\abs{x_n}^2}
+    &= \sum_{i=0}^{N-1} \frac{\sigma}{\sqrt{N}}^2 = \sigma^2 \\
+    \max\text{PAPR}
+    &= N. \label{eq:papr}
+\end{align}
+The probability of PAPR exceeding certain threshold $P_0$ is
+\begin{equation}
+    \label{eq:papr_prob}
+    \P{\text{PAPR}>P_0} = 1 - (1-e^{-P_0})^N.
+\end{equation}
+The~\cref{eq:papr_prob} states the PAPR will exceed certain threshold with high probability when $N$ is large. And the~\cref{eq:papr} states the PAPR can be as large as $N$.
+
 
 Another issue is that OFDM is sensitive to Doppler Shift. The Doppler Shift in the channel will cause frequency shift in the received signal. This will reduce the SNR because the matched filter is designed to match the carrier frequency. The OFDM suffers more from the Doppler Shift because the OFDM system has a large bandwidth and the Doppler Shift can cause the subcarriers to shift out of the subcarrier spacing. This will cause the orthogonality of the subcarriers to be violated and the intercarrier interference (ICI) to be introduced. From the matrix analysis perspective, the $\Lambda$ in~\cref{eq:demod} will not be diagonal under the Doppler Shift. The Doppler Shift can be compensated in many ways.
 \begin{enumerate}[(i)]
@@ -160,4 +179,6 @@ Another issue is that OFDM is sensitive to Doppler Shift. The Doppler Shift in t
     \item Error Correction Coding (ECC) can be used to improve the system robustness. However, the ECC will introduce additional overhead and reduce the system capacity.
     \item New modulation schemes such as the Orthogonal Time Frequency Space (OTFS), which designs the waveform to be invariant to the Doppler Shift by using delay-Doppler domain signal representation. However, OTFS is not easy to be equalized as OFDM and the system complexity is higher than OFDM. The delay-Doppler domain channel estimation is also challenging.
 \end{enumerate}
+
+In conclusion, although OFDM system is able to overcome ISI and frequency-selective fading while maintain high symbol rate under complex channel condition, the maximum capacity is still bounded by the high PAPR and Doppler Shift. Overcoming these issues is the key to design the next generation wireless communication system.
 
