--- a/OFDM/Course Report/00main.tex
+++ b/OFDM/Course Report/00main.tex
@@ -38,6 +38,8 @@
 \date{\today}
 
 \addbibresource{bib.bib}
+% \graphicspath{ {../MyOFDM_1/} }
+% \epstopdfsetup{outdir=./}
 
 %%%% Start Document %%%%
 \begin{document}
@@ -67,6 +69,7 @@
 \input{04sec4.tex}
 
 \section{Conclusion}
+In this report, we introduce the OFDM modulation and demodulation process, discuss its mathematical properties, and evaluate its performance with simulations. We show that the OFDM system is robust to frequency-selective fading and intersymbol interference. The simulation results demonstrate that the OFDM system is only subject to flat fading as long as the cyclic prefix length is longer than the channel delay spread. The OFDM system is widely used in modern wireless communications due to its high symbol rates and robustness to channel impairments.
 
 \clearpage
 \printbibliography
